# BetelineyLauncher

./: .gitignore  CLAUDE.md  CMakeLists.txt  COMPILAR.ps1  COMPILAR_BETELINEY.bat  COMPILAR_LINUX.sh  DEVLOG.md  EMPAQUETAR_APPIMAGE.sh  EMPAQUETAR_LINUX.sh  EMPAQUETAR_WINDOWS.bat  ESTADO.md  ESTADO_HISTORICO.md  ESTRATEGIA_IA.md  LEEME.txt  MASTER_PLAN.md  MONTAR_WINDOWS_NOBARA.sh  README.md  vcpkg.json
.claude/: settings.json
.claude/agents/: feature-builder.md  maintenance-checker.md  performance-optimizer.md  qa-tester.md  security-auditor.md  ui-ux-reviewer.md
.github/workflows/: build.yml
buildconfig/: BuildConfig.cpp.in  BuildConfig.h
cmake/: GetGitRevisionDescription.cmake.in
docs/: ARQUITECTURA.md  AUDITORIA_MODULOS.md  CHANGELOG.md  COMPILAR_WINDOWS.md  CONTRIBUTING.md  GESTORES_Y_SKILLS.md  PERFILES_JVM.md  TROUBLESHOOTING.md
launcher/: Application.cpp  Application.h  ApplicationMessage.cpp  AssertHelpers.h  BaseInstance.cpp  BaseInstance.h  BaseVersion.h  BaseVersionList.cpp  BetelineyAchievements.cpp  BetelineyAchievements.h  BetelineyCode.h  BetelineyProfiles.h  BetelineyTime.cpp  BetelineyTime.h  BetelineyZip.cpp  BetelineyZip.h  BubblewrapSandbox.cpp  BubblewrapSandbox.h  CMakeLists.txt  Commandline.cpp  DesktopServices.cpp  Exception.h  FastFileIconProvider.cpp  FastFileIconProvider.h  FavoriteServers.cpp  FavoriteServers.h  FileIgnoreProxy.cpp  FileIgnoreProxy.h  FileSystem.cpp  FileSystem.h  GZip.cpp  HardwareInfo.cpp  HardwareInfo.h  InstanceCopyTask.cpp  InstanceDirUpdate.cpp  InstanceDirUpdate.h  InstanceImportTask.cpp  InstanceImportTask.h  InstanceList.cpp  InstanceList.h  (+27 more)
launcher/archive/: ArchiveReader.cpp  ArchiveReader.h  ArchiveWriter.cpp  ArchiveWriter.h  ExportToZipTask.cpp  ExportToZipTask.h  ExtractZipTask.cpp  ExtractZipTask.h
launcher/console/: WindowsConsole.cpp  WindowsConsole.h
launcher/crash/: BetelineyPanicHandler.cpp  BetelineyPanicHandler.h
launcher/filelink/: FileLink.cpp  FileLink.h  filelink_main.cpp
launcher/icons/: BetelineyIcon.cpp  BetelineyIcon.h  IconList.cpp  IconList.h  IconUtils.cpp  IconUtils.h
launcher/java/: JavaChecker.cpp  JavaInstall.cpp  JavaInstall.h  JavaInstallList.cpp  JavaMetadata.cpp  JavaMetadata.h  JavaUtils.cpp  JavaUtils.h
launcher/launch/: LaunchTask.cpp  LaunchTask.h
launcher/logs/: AnonymizeLog.cpp  AnonymizeLog.h  BetelineyLogAnalyzer.cpp  BetelineyLogAnalyzer.h  LogParser.cpp  LogParser.h
launcher/macsandbox/: SecurityBookmarkFileAccess.h
launcher/meta/: BaseEntity.cpp  JsonFormat.cpp  JsonFormat.h
launcher/migration/: GDLauncherMigrator.cpp  GDLauncherMigrator.h
launcher/minecraft/: AssetsUtils.cpp  Component.cpp  ComponentUpdateTask.cpp  GradleSpecifier.h  LaunchProfile.cpp  LaunchProfile.h  Library.cpp  Library.h  Logging.cpp  Logging.h  MinecraftInstance.cpp  MinecraftInstance.h  MinecraftLoadAndCheck.cpp  MojangVersionFormat.cpp  OneSixVersionFormat.cpp  PackProfile.cpp  PackProfile.h  ProfileUtils.cpp  ProfileUtils.h  Rule.cpp  Rule.h  ShortcutUtils.cpp  ShortcutUtils.h  VersionFile.cpp  VersionFile.h  World.cpp  WorldList.cpp
launcher/modplatform/: ModIndex.cpp  ModIndex.h  ResourceAPI.h  ResourceType.cpp  ResourceType.h
launcher/net/: ApiDownload.cpp  ApiDownload.h  ApiHeaderProxy.h  ApiUpload.cpp  ApiUpload.h  ByteArraySink.h  ChecksumValidator.h  Download.cpp  Download.h  DummySink.h  FileSink.cpp  FileSink.h  HeaderProxy.h  HttpMetaCache.cpp  HttpMetaCache.h  Logging.cpp  Sink.h  (+14 more)
libraries/javacheck/: CMakeLists.txt
libraries/launcher/: CMakeLists.txt
libraries/launcher/com/beteliney/launcher/: EntryPoint.java  SystemProperties.java
libraries/launcher/com/beteliney/launcher/exception/: ParameterNotFoundException.java  ParseException.java
libraries/launcher/com/beteliney/launcher/launcher/: Launcher.java
libraries/launcher/com/beteliney/launcher/launcher/impl/: AbstractLauncher.java  StandardLauncher.java
libraries/launcher/com/beteliney/launcher/legacy/: LegacyProxy.java
libraries/launcher/com/beteliney/launcher/utils/: Parameters.java  ReflectionUtils.java
libraries/launcher/com/beteliney/launcher/utils/logging/: Level.java  Log.java
libraries/launcher/legacy/com/beteliney/launcher/legacy/: LegacyFrame.java  LegacyLauncher.java  LegacyProxy.java
libraries/launcher/legacy/com/beteliney/launcher/legacy/fix/online/: Handler.java  OnlineFixes.java  OnlineModeFix.java  SkinFix.java
libraries/launcher/legacy/com/beteliney/launcher/legacy/utils/: Base64.java
libraries/launcher/legacy/com/beteliney/launcher/legacy/utils/api/: MojangApi.java  Texture.java
libraries/launcher/legacy/com/beteliney/launcher/legacy/utils/json/: JsonParseException.java  JsonParser.java
libraries/launcher/legacy/com/beteliney/launcher/legacy/utils/url/: ByteArrayUrlConnection.java  UrlUtils.java
libraries/launcher/legacy/net/minecraft/: Launcher.java
libraries/launcher/legacy/org/prismlauncher/legacy/: LegacyFrame.java  LegacyLauncher.java  LegacyProxy.java
libraries/launcher/legacy/org/prismlauncher/legacy/fix/online/: Handler.java  OnlineFixes.java  OnlineModeFix.java  SkinFix.java
libraries/launcher/legacy/org/prismlauncher/legacy/utils/: Base64.java
libraries/launcher/legacy/org/prismlauncher/legacy/utils/api/: MojangApi.java  Texture.java
libraries/launcher/legacy/org/prismlauncher/legacy/utils/json/: JsonParseException.java  JsonParser.java
libraries/launcher/legacy/org/prismlauncher/legacy/utils/url/: ByteArrayUrlConnection.java  UrlUtils.java
packaging/: com.beteliney.BetelineyLauncher.json
program_info/: CMakeLists.txt  README.md  beteliney.manifest.in  beteliney.rc.in  com.beteliney.BetelineyLauncher.metainfo.xml.in  genicons.sh  win_install.nsi.in
tests/: AccountData_test.cpp  AccountList_test.cpp  AnonymizeLog_test.cpp  BetelineyGPUDetect_test.cpp  BetelineyProfiles_test.cpp  BetelineyTime_test.cpp  BetelineyTranslation_test.cpp  BetelineyZip_test.cpp  CMakeLists.txt  MetaPathTraversal_test.cpp  MinecraftAccount_test.cpp  PackProfileLoadPathTraversal_test.cpp  StringUtils_test.cpp  XmlLogs_test.cpp  test_jvm_profile_integration.sh
(+426 files in other folders)
